--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -1,9 +1,9 @@
-name: Stage dep;oy
+name: Stage deploy
 
 on:
   push:
     branches:
-      - main
+      - workflow_dispatch
 jobs:
   deploy:
     name: Deploy to Stage
