--- a/.github/workflows/deploy_stage.yml
+++ b/.github/workflows/deploy_stage.yml
@@ -1,9 +1,7 @@
 name: Stage deploy
 
-on:
-  push:
-    branches:
-      - workflow_dispatch
+on: workflow_dispatch
+
 jobs:
   deploy:
     name: Deploy to Stage
